# learn_bazel

./: .clang-format  .gitignore  Cargo.toml  MODULE.bazel  README.md  WORKSPACE
modules/cpp_bin/: BUILD  main.cpp
modules/lib_a/: BUILD  Cargo.toml
modules/lib_cxx/: BUILD  Cargo.toml
modules/lib_cxx/cpp/: ftheta.cpp  ftheta.h
modules/lib_cxx/src/: bridge.rs  ftheta.rs  lib.rs  main.rs
tools/bazel/: rust_cxx_bridge.bzl
